[refactor] 模型输出添加新闻证据