@@ -13,13 +13,11 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-/**
- * 响应组装器。
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -32,33 +30,17 @@ public class ActionComposer {
                                        TaskFamily taskFamily) {
         SessionState sessionState = context.getSessionState();
         String sessionId = sessionState.getSessionId();
-        log.info("[action-compose] 开始组装响应|sessionId={} |taskFamily={}", sessionId, taskFamily);
+        log.info("[action-compose] start build response|sessionId={} |taskFamily={}", sessionId, taskFamily);
 
         try {
-            // 根据答案中引用的新闻ID构建候选列表
-            List<String> citationIds = pipelineResult.getCitations();
-            List<Candidate> candidates;
-            if (citationIds != null && !citationIds.isEmpty()) {
-                // 将字符串ID转换为Long类型
-                List<Long> citedArticleIds = citationIds.stream()
-                        .map(id -> {
-                            try {
-                                return Long.parseLong(id);
-                            } catch (NumberFormatException e) {
-                                return null;
-                            }
-                        })
-                        .filter(id -> id != null)
-                        .collect(Collectors.toList());
-                candidates = buildCandidatesByCitationIds(citedArticleIds);
-                log.info("[action-compose] 根据引用构建候选|citationCount={} |candidateCount={}", citationIds.size(), candidates.size());
-            } else {
-                // 兼容旧逻辑：使用检索返回的候选ID
-                candidates = buildCandidates(pipelineResult.getCandidateIds());
-            }
+            List<PipelineResult.PipelineAnswerItem> pipelineItems = pipelineResult.getAnswerItems();
+            List<AgentResponse.AnswerItemView> answerItems = buildAnswerItems(pipelineItems);
+            String mergedAnswer = answerItems.stream()
+                    .map(AgentResponse.AnswerItemView::getText)
+                    .filter(text -> text != null && !text.isBlank())
+                    .collect(Collectors.joining("\n"));
 
             Map<String, Object> extraData = pipelineResult.getExtraData();
-
             AgentResponse.ResponseMetadata metadata = AgentResponse.ResponseMetadata.builder()
                     .retrievedCount(pipelineResult.getCandidateIds() != null ? pipelineResult.getCandidateIds().size() : 0)
                     .llmCallCount(pipelineResult.getLlmCallCount())
@@ -85,9 +67,8 @@ public class ActionComposer {
 
             return AgentResponse.builder()
                     .sessionId(sessionId)
-                    .answer(pipelineResult.getAnswer())
-                    .candidates(candidates)
-                    .citations(pipelineResult.getCitations())
+                    .answer(mergedAnswer)
+                    .answerItems(answerItems)
                     .taskFamily(taskFamily)
                     .needsClarification(false)
                     .timestamp(LocalDateTime.now())
@@ -95,98 +76,80 @@ public class ActionComposer {
                     .metadata(metadata)
                     .build();
         } catch (Exception e) {
-            log.error("[action-compose] 组装响应失败", e);
+            log.error("[action-compose] build response failed", e);
             return buildErrorResponse(sessionId, e.getMessage());
         }
     }
 
-    private List<Candidate> buildCandidates(List<Long> articleIds) {
-        if (articleIds == null || articleIds.isEmpty()) {
-            return new ArrayList<>();
+    private List<AgentResponse.AnswerItemView> buildAnswerItems(List<PipelineResult.PipelineAnswerItem> pipelineItems) {
+        if (pipelineItems == null || pipelineItems.isEmpty()) {
+            return List.of();
         }
-        try {
-            Map<Long, NewsClient.NewsArticleDto> articleMap = newsClient.getArticlesByIds(articleIds)
-                    .stream()
-                    .collect(Collectors.toMap(NewsClient.NewsArticleDto::getId, article -> article));
 
-            return articleIds.stream()
-                    .map(id -> {
-                        NewsClient.NewsArticleDto article = articleMap.get(id);
-                        if (article == null) {
-                            return null;
-                        }
-                        return Candidate.builder()
-                                .articleId(article.getId())
-                                .title(article.getTitle())
-                                .url(article.getUrl())
-                                .snippet(truncate(article.getContent(), 200))
-                                .source(article.getSource())
-                                .publishedAt(article.getPublishedAt() != null ? article.getPublishedAt() : null)
-                                .imageUrl(article.getImageUrl())
-                                .build();
-                    })
-                    .filter(candidate -> candidate != null)
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            log.warn("[action-compose] 拉取候选详情失败，使用兜底候选|error={}", e.getMessage());
-            return articleIds.stream()
-                    .map(id -> Candidate.builder()
-                            .articleId(id)
-                            .title("Article " + id)
-                            .snippet("Details unavailable")
-                            .build())
-                    .collect(Collectors.toList());
+        List<Long> allNewsIds = pipelineItems.stream()
+                .flatMap(item -> item.getNewsIds() == null ? java.util.stream.Stream.<Long>empty() : item.getNewsIds().stream())
+                .filter(id -> id != null)
+                .distinct()
+                .toList();
+
+        Map<Long, NewsClient.NewsArticleDto> articleMap = new LinkedHashMap<>();
+        if (!allNewsIds.isEmpty()) {
+            try {
+                articleMap = newsClient.getArticlesByIds(allNewsIds).stream()
+                        .filter(article -> article != null && article.getId() != null)
+                        .collect(Collectors.toMap(NewsClient.NewsArticleDto::getId, article -> article, (a, b) -> a, LinkedHashMap::new));
+            } catch (Exception e) {
+                log.warn("[action-compose] load related news failed, fallback minimal cards|error={}", e.getMessage());
+            }
         }
+        final Map<Long, NewsClient.NewsArticleDto> finalArticleMap = articleMap;
+
+        List<AgentResponse.AnswerItemView> result = new ArrayList<>();
+        for (PipelineResult.PipelineAnswerItem item : pipelineItems) {
+            if (item == null || item.getText() == null || item.getText().isBlank()) {
+                continue;
+            }
+            List<Long> newsIds = item.getNewsIds() == null ? List.of() : item.getNewsIds();
+            List<Candidate> relatedNews = newsIds.stream()
+                    .map(id -> toCandidateCard(id, finalArticleMap.get(id)))
+                    .filter(card -> card != null)
+                    .toList();
+            result.add(AgentResponse.AnswerItemView.builder()
+                    .text(item.getText())
+                    .newsIds(newsIds)
+                    .relatedNews(relatedNews)
+                    .build());
+        }
+        return result;
     }
 
-    /**
-     * 根据答案中引用的新闻ID构建候选列表（包含标题和图片URL）
-     */
-    private List<Candidate> buildCandidatesByCitationIds(List<Long> articleIds) {
-        if (articleIds == null || articleIds.isEmpty()) {
-            return new ArrayList<>();
+    private Candidate toCandidateCard(Long id, NewsClient.NewsArticleDto article) {
+        if (id == null) {
+            return null;
         }
-        try {
-            Map<Long, NewsClient.NewsArticleDto> articleMap = newsClient.getArticlesByIds(articleIds)
-                    .stream()
-                    .collect(Collectors.toMap(NewsClient.NewsArticleDto::getId, article -> article));
-
-            return articleIds.stream()
-                    .map(id -> {
-                        NewsClient.NewsArticleDto article = articleMap.get(id);
-                        if (article == null) {
-                            log.warn("[action-compose] 引用ID对应文章不存在|id={}", id);
-                            return null;
-                        }
-                        return Candidate.builder()
-                                .articleId(article.getId())
-                                .title(article.getTitle())
-                                .url(article.getUrl())
-                                .snippet(truncate(article.getContent(), 200))
-                                .source(article.getSource())
-                                .publishedAt(article.getPublishedAt() != null ? article.getPublishedAt() : null)
-                                .imageUrl(article.getImageUrl())
-                                .build();
-                    })
-                    .filter(candidate -> candidate != null)
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            log.warn("[action-compose] 根据引用拉取候选详情失败，使用兜底候选|error={}", e.getMessage());
-            return articleIds.stream()
-                    .map(id -> Candidate.builder()
-                            .articleId(id)
-                            .title("Article " + id)
-                            .snippet("Details unavailable")
-                            .build())
-                    .collect(Collectors.toList());
+        if (article == null) {
+            return Candidate.builder()
+                    .articleId(id)
+                    .title("Article " + id)
+                    .snippet("Details unavailable")
+                    .build();
         }
+        return Candidate.builder()
+                .articleId(article.getId())
+                .title(article.getTitle())
+                .url(article.getUrl())
+                .snippet(truncate(article.getContent(), 200))
+                .source(article.getSource())
+                .publishedAt(article.getPublishedAt())
+                .imageUrl(article.getImageUrl())
+                .build();
     }
 
     private AgentResponse buildErrorResponse(String sessionId, String errorMessage) {
         return AgentResponse.builder()
                 .sessionId(sessionId)
                 .answer("内部错误: " + errorMessage)
-                .candidates(new ArrayList<>())
+                .answerItems(List.of())
                 .timestamp(LocalDateTime.now())
                 .build();
     }
